--- a/LEX_and_YACC_Compiler.ipynb
+++ b/LEX_and_YACC_Compiler.ipynb
@@ -46,10 +46,27 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "CM_9N3RogX8y"
+        "id": "CM_9N3RogX8y",
+        "outputId": "163d8def-e55a-4fd0-acce-f0aa60ed27af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "bison is already the newest version (2:3.8.2+dfsg-1build1).\n",
+            "flex is already the newest version (2.6.4-8build2).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 38 not upgraded.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -62,63 +79,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 106
         },
         "id": "Jyt0i_pTexWf",
-        "outputId": "4081e93e-a1e8-4033-93d1-ff3abaeb080a"
+        "outputId": "73b9b56d-20d3-4da5-ecc2-fd86ab15e64b"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting program.l\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-952389237.py, line 4)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-952389237.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    int COMMENT = 0;\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
         "%{\n",
-        "#include <stdio.h>\n",
-        "#include <stdlib.h>\n",
         "int COMMENT = 0;\n",
         "%}\n",
-        "\n",
         "identifier [a-zA-Z][a-zA-Z0-9]*\n",
-        "\n",
         "%%\n",
-        "#.*                             { printf(\"\\n%s is a preprocessor directive\", yytext); }\n",
-        "\n",
-        "int|float|char|double|while|for|struct|typedef|do|if|break|continue|void|switch|return|else|goto\n",
-        "                                { printf(\"\\n\\t%s is a keyword\", yytext); }\n",
-        "\n",
-        "\"/*\"                            { COMMENT = 1; printf(\"\\n\\t%s is a COMMENT start\", yytext); }\n",
-        "\"*/\"                            { COMMENT = 0; printf(\"\\n\\t%s is a COMMENT end\", yytext); }\n",
-        "\n",
-        "{identifier}\\(                  { if (!COMMENT) printf(\"\\nFUNCTION \\n\\t%s\", yytext); }\n",
-        "\\{                              { if (!COMMENT) printf(\"\\n BLOCK BEGINS\"); }\n",
-        "\\}                              { if (!COMMENT) printf(\"BLOCK ENDS \"); }\n",
-        "{identifier}(\\[[0-9]*\\])?       { if (!COMMENT) printf(\"\\n %s IDENTIFIER\", yytext); }\n",
-        "\\\".*\\\"                          { if (!COMMENT) printf(\"\\n\\t %s is a STRING\", yytext); }\n",
-        "[0-9]+                          { if (!COMMENT) printf(\"\\n %s is a NUMBER \", yytext); }\n",
-        "\\)(\\:)?                         { if (!COMMENT) { printf(\"\\n\\t\"); ECHO; printf(\"\\n\"); } }\n",
-        "\\(                              ECHO;\n",
-        "=                               { if (!COMMENT) printf(\"\\n\\t %s is an ASSIGNMENT OPERATOR\", yytext); }\n",
-        "\\<=|\\>=|\\<|==|\\>                { if (!COMMENT) printf(\"\\n\\t%s is a RELATIONAL OPERATOR\", yytext); }\n",
-        "\n",
-        ".|\\n                            ;   // Ignore all other characters\n",
+        "#.* {printf(\"\\n%s is a preprocessor directive\", yytext);}\n",
+        "int |\n",
+        "float |\n",
+        "char |\n",
+        "double |\n",
+        "while |\n",
+        "for |\n",
+        "struct |\n",
+        "typedef |\n",
+        "do |\n",
+        "if |\n",
+        "break |\n",
+        "continue |\n",
+        "void |\n",
+        "switch |\n",
+        "return |\n",
+        "else |\n",
+        "goto {printf(\"\\n\\t%s is a keyword\", yytext);}\n",
+        "\"/*\" {COMMENT = 1; printf(\"\\n\\t %s is a COMMENT\", yytext);}\n",
+        "{identifier}\\( {if(!COMMENT) printf(\"\\nFUNCTION \\n\\t%s\", yytext);}\n",
+        "\\{ {if(!COMMENT) printf(\"\\n BLOCK BEGINS\");}\n",
+        "\\} {if(!COMMENT) printf(\"BLOCK ENDS \");}\n",
+        "{identifier}(\\[[0-9]*\\])? {if(!COMMENT) printf(\"\\n %s IDENTIFIER\", yytext);}\n",
+        "\\\".*\\\" {if(!COMMENT) printf(\"\\n\\t %s is a STRING\", yytext);}\n",
+        "[0-9]+ {if(!COMMENT) printf(\"\\n %s is a NUMBER \", yytext);}\n",
+        "\\)(\\:)? {if(!COMMENT) printf(\"\\n\\t\"); ECHO; printf(\"\\n\");}\n",
+        "\\( ECHO;\n",
+        "= {if(!COMMENT) printf(\"\\n\\t %s is an ASSIGNMENT OPERATOR\", yytext);}\n",
+        "\\<= |\n",
+        "\\>= |\n",
+        "\\< |\n",
+        "== |\n",
+        "\\> {if(!COMMENT) printf(\"\\n\\t%s is a RELATIONAL OPERATOR\", yytext);}\n",
         "%%\n",
-        "\n",
-        "int main()\n",
+        "int main(int argc, char **argv)\n",
         "{\n",
-        "    printf(\"Enter code (Ctrl+D to end):\\n\\n\");\n",
+        "    FILE *file;\n",
+        "    file = fopen(\"var.c\", \"r\");\n",
+        "    if(!file)\n",
+        "    {\n",
+        "        printf(\"could not open the file\");\n",
+        "        exit(0);\n",
+        "    }\n",
+        "    yyin = file;\n",
         "    yylex();\n",
         "    printf(\"\\n\");\n",
         "    return 0;\n",
         "}\n",
-        "\n",
         "int yywrap()\n",
         "{\n",
         "    return 1;\n",
@@ -142,22 +175,10 @@
         "This is a sample file."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MUUdcBtRgtjf",
-        "outputId": "abb24576-792f-4d7b-defa-b9911fa1a067"
+        "id": "MUUdcBtRgtjf"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing program.txt\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -170,33 +191,10 @@
         "./a.out program.txt"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tqpZgNYpe263",
-        "outputId": "0356f4bf-537c-428e-ab32-765badfbb647"
+        "id": "tqpZgNYpe263"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Word Count: 5\n",
-            "Character Count: 18\n",
-            "Space Count: 4\n",
-            "Line Count: 2\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -209,73 +207,20 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title Writing YACC program\n",
-        "%%writefile program.y\n",
-        "\n",
-        "%{\n",
-        "    #include<stdio.h>\n",
-        "    #include<stdlib.h>\n",
-        "%}\n",
-        "%token DIGIT LETTER UND NL\n",
-        "%%\n",
-        "stmt: variable NL {printf(\"Valid Identifier\\n\");exit(0);}\n",
-        "variable: LETTER alphanumeric;\n",
-        "alphanumeric: LETTER alphanumeric\n",
-        "            | DIGIT alphanumeric\n",
-        "            | UND alphanumeric\n",
-        "            | LETTER\n",
-        "            | DIGIT\n",
-        "            | UND;\n",
-        "%%\n",
-        "\n",
-        "int yyerror(){\n",
-        "    printf(\"Invalid Identifier\\n\");\n",
-        "    exit(0);\n",
-        "}\n",
-        "\n",
-        "void main(){\n",
-        "    printf(\"Enter the variable name: \");\n",
-        "    yyparse();\n",
-        "}"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PR_WVl_3kvjz",
-        "outputId": "a19ffcd6-84d8-4a15-f1fe-5dd124b35450"
+        "id": "PR_WVl_3kvjz"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting program.y\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ae488aa8-96d1-4cab-c243-5097cc230c51",
         "id": "d_jqt4ajkllz"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting program.l\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Writing Lex program\n",
         "%%writefile program.l\n",
@@ -329,24 +274,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edd8a233-74c0-471c-fa30-f023ef7ff458",
+        "outputId": "48c3333c-1765-42b9-dcb6-94a7cce021af",
         "id": "nqs9Nq64kll4"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[01m\u001b[Ky.tab.c:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kyyparse\u001b[m\u001b[K’:\n",
-            "\u001b[01m\u001b[Ky.tab.c:1121:16:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kimplicit declaration of function ‘\u001b[01m\u001b[Kyylex\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K-Wimplicit-function-declaration\u001b[m\u001b[K]\n",
-            "       yychar = \u001b[01;35m\u001b[Kyylex\u001b[m\u001b[K ();\n",
-            "                \u001b[01;35m\u001b[K^~~~~\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[Ky.tab.c:1256:7:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kimplicit declaration of function ‘\u001b[01m\u001b[Kyyerror\u001b[m\u001b[K’; did you mean ‘\u001b[01m\u001b[Kyyerrok\u001b[m\u001b[K’? [\u001b[01;35m\u001b[K-Wimplicit-function-declaration\u001b[m\u001b[K]\n",
-            "       \u001b[01;35m\u001b[Kyyerror\u001b[m\u001b[K (YY_(\"syntax error\"));\n",
-            "       \u001b[01;35m\u001b[K^~~~~~~\u001b[m\u001b[K\n",
-            "       \u001b[32m\u001b[Kyyerrok\u001b[m\u001b[K\n",
-            "Enter the variable name: variable_name\n",
+            "\u001b[01m\u001b[Ky.tab.c:1024:16:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kimplicit declaration of function ‘\u001b[01m\u001b[Kyylex\u001b[m\u001b[K’ [\u001b[01;35m\u001b[K\u001b]8;;https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html#index-Wimplicit-function-declaration\u0007-Wimplicit-function-declaration\u001b]8;;\u0007\u001b[m\u001b[K]\n",
+            " 1024 |       yychar = \u001b[01;35m\u001b[Kyylex\u001b[m\u001b[K ();\n",
+            "      |                \u001b[01;35m\u001b[K^~~~~\u001b[m\u001b[K\n",
+            "\u001b[01m\u001b[Ky.tab.c:1165:7:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kimplicit declaration of function ‘\u001b[01m\u001b[Kyyerror\u001b[m\u001b[K’; did you mean ‘\u001b[01m\u001b[Kyyerrok\u001b[m\u001b[K’? [\u001b[01;35m\u001b[K\u001b]8;;https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html#index-Wimplicit-function-declaration\u0007-Wimplicit-function-declaration\u001b]8;;\u0007\u001b[m\u001b[K]\n",
+            " 1165 |       \u001b[01;35m\u001b[Kyyerror\u001b[m\u001b[K (YY_(\"syntax error\"));\n",
+            "      |       \u001b[01;35m\u001b[K^~~~~~~\u001b[m\u001b[K\n",
+            "      |       \u001b[32m\u001b[Kyyerrok\u001b[m\u001b[K\n",
+            "Enter the variable name: if\n",
             "Valid Identifier\n"
           ]
         },
@@ -356,7 +301,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 14
         }
       ]
     }
